@@ -13,7 +13,7 @@ function offshore_pump_proc.build(database, dictionaries)
     end
 
     database.entity[name] = {
-      blueprintable = not prototype.has_flag("hidden") and not prototype.has_flag("not-blueprintable"),
+      blueprintable = util.is_blueprintable(prototype),
       class = "entity",
       enabled = true,
       fluid = { class = "fluid", name = fluid.name },
